# AImonkey

./: README.md  pyproject.toml  requirements.txt
.monkeycode/: MEMORY.md
.monkeycode/specs/a-stock-backtest/: design.md  requirements.md
app/: __init__.py  config.py
app/api/: __init__.py  backtest_api.py  data.py  formula.py  selector.py
app/models/: __init__.py  stock.py
app/services/: __init__.py  backtest.py  data_service.py  formula_executor.py  formula_parser.py  stock_selector.py
app/utils/: helpers.py
data/: stock_data.db
data/test_format/: 000001.SZ.txt  600000.SH.txt
data/test_real/: SZ#300001.txt
static/css/: style.css
static/js/: app.js
templates/: index.html
tests/: test_formula_executor.py  test_formula_parser.py
