[tool.poetry]
name = "a-stock-backtest"
version = "0.1.0"
description = "A股回测系统 - 支持通达信公式解析、选股和回测"
authors = ["Developer"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.0"
flask-cors = "^4.0.0"
flask-sqlalchemy = "^3.0.0"
sqlalchemy = "^2.0.0"
pandas = "^2.0.0"
numpy = "^1.24.0"
reportlab = "^4.0.0"
python-dateutil = "^2.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
